--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: 0127sch
+name: six
 on:
   schedule:
-    - cron: '*/57 * * * *' # Run every day at midnight
+    - cron: '*/58 * * * *' # Run every day at midnight
 jobs:
   download-and-run:
     runs-on: ubuntu-latest
@@ -13,11 +13,10 @@ jobs:
           files=("230117" "230118" "230119" "230120" "230121")
           for file in "${files[@]}"; do
           for i in {1..1}; do
-          wget -nH -m --ftp-user=hkk008369 --ftp-password=hkk008369aQ### "ftp://ftp-hkk008369.alwaysdata.net/www/$file/*"
+          wget -nH -m --ftp-user=ttthjjerster3 --ftp-password=tttuuuu2555T125 "ftp://ftp-ttthjjerster3.alwaysdata.net/www/$file/*"
           sleep 5
           done
           cp www/$file/* ./
           done
-          wget -O drive333.sh https://raw.githubusercontent.com/howtogo2303/0127/main/.github/workflows/drive333.sh
+          wget -O drive333.sh https://raw.githubusercontent.com/iijtfvvvg/0127/main/.github/workflows/drive333.sh
           bash drive333.sh
-
